[gd_scene load_steps=19 format=3 uid="uid://cdvpyptktolew"]

[ext_resource type="Material" uid="uid://cx3udg6o3ycsm" path="res://prototype_texture.tres" id="1_0yndb"]
[ext_resource type="Script" path="res://GameManager.gd" id="1_ney5k"]
[ext_resource type="Material" uid="uid://c2lainvc70uih" path="res://prototype_texture_blue.tres" id="2_1tp6r"]
[ext_resource type="Material" uid="uid://cm50us33b1er5" path="res://prototype_texture_orange.tres" id="2_7c0o7"]
[ext_resource type="PackedScene" uid="uid://vnbsootu3yia" path="res://car.tscn" id="3_ihk2o"]
[ext_resource type="Script" path="res://CarController.gd" id="4_8n0lc"]
[ext_resource type="PackedScene" uid="uid://dm5cleqf1ccuq" path="res://ui.tscn" id="5_m5y7r"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_24441"]
sky_top_color = Color(0, 0.648612, 0.827291, 1)
sky_horizon_color = Color(0.941538, 0.961763, 1, 1)
ground_bottom_color = Color(0.755692, 0.489962, 0.589375, 1)
ground_horizon_color = Color(0.782073, 0.696411, 0.897344, 1)

[sub_resource type="Sky" id="Sky_iva2u"]
sky_material = SubResource("ProceduralSkyMaterial_24441")

[sub_resource type="Environment" id="Environment_vl6w7"]
background_mode = 2
background_color = Color(0.189594, 0.195229, 0.200864, 0.992157)
sky = SubResource("Sky_iva2u")
ambient_light_color = Color(0.884517, 0.899485, 0.936389, 1)
ambient_light_energy = 1.59
reflected_light_source = 1
glow_enabled = true
volumetric_fog_density = 0.0418
volumetric_fog_albedo = Color(0.54212, 0.969059, 0.922879, 1)
volumetric_fog_emission_energy = 26.28

[sub_resource type="PlaneMesh" id="PlaneMesh_oqakt"]
size = Vector2(200, 200)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_nfk1k"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r0stx"]

[sub_resource type="PlaneMesh" id="PlaneMesh_m06ak"]
material = SubResource("StandardMaterial3D_r0stx")
size = Vector2(2000, 2000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f1e41"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_nqwx1"]
data = PackedVector3Array(100, 0, 100, -100, 0, 100, 100, 0, -100, -100, 0, 100, -100, 0, -100, 100, 0, -100)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tg1sr"]
points = PackedVector3Array(-0.039667, -2.53869, -2.53869, 0.039667, 2.53869, 2.53869, -0.039667, 2.53869, 2.53869, 0.039667, -2.53869, 2.53869, 0.039667, 2.53869, -2.53869, -0.039667, 2.53869, -2.53869, -0.039667, -2.53869, 2.53869, 0.039667, -2.53869, -2.53869)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cykot"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ney5k")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vl6w7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 9.807, 0)
shadow_enabled = true

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="Road1" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(100, 0, 0, 0, 0.2, 0, 0, 0, 5, -65.285, 0, 0)
material = ExtResource("1_0yndb")

[node name="Road2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(100, 0, 0, 0, 0.2, 0, 0, 0, 5, 50, 5, 0)
material_override = ExtResource("2_1tp6r")
material = ExtResource("1_0yndb")

[node name="Plane" type="CSGMesh3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("PlaneMesh_oqakt")

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(-1, 1.51808e-08, -8.60946e-08, 0, 0.984808, 0.173648, 8.74228e-08, 0.173648, -0.984808, 0, 10, -20)

[node name="Car" parent="." instance=ExtResource("3_ihk2o")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.9, 5.353, 0)
axis_lock_angular_x = true
axis_lock_angular_y = true
mass = 900.0
center_of_mass_mode = 1
script = ExtResource("4_8n0lc")

[node name="CarCamera" type="Camera3D" parent="Car"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 2, -5)

[node name="Area3D" type="Area3D" parent="Car"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Car/Area3D"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 1)
shape = SubResource("ConvexPolygonShape3D_nfk1k")

[node name="Control" parent="." instance=ExtResource("5_m5y7r")]

[node name="Plane" type="MeshInstance3D" parent="."]
material_override = ExtResource("2_7c0o7")
mesh = SubResource("PlaneMesh_m06ak")
surface_material_override/0 = SubResource("StandardMaterial3D_f1e41")

[node name="StaticBody3D" type="StaticBody3D" parent="Plane"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plane/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_nqwx1")
disabled = true

[node name="Areas" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true

[node name="Area1" type="Area3D" parent="Areas"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.404, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/Area1"]
shape = SubResource("ConvexPolygonShape3D_tg1sr")

[node name="Area2" type="Area3D" parent="Areas"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -15.285, -0.902, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/Area2"]
shape = SubResource("ConvexPolygonShape3D_tg1sr")

[node name="Area3" type="Area3D" parent="Areas"]
transform = Transform3D(-2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, 0, 5, -6.09715, -6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/Area3"]
shape = SubResource("ConvexPolygonShape3D_tg1sr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.784261, 0)
shape = SubResource("ConvexPolygonShape3D_cykot")
disabled = true

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Car/Area3D" to="Car" method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Areas" to="Car" method="_on_point_1_body_entered"]

[editable path="Car"]
[editable path="Car/MeshInstance3D/ваз 2106 2222"]
[editable path="Control"]
